--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,16 @@
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white shadow-2xl rounded-2xl w-full max-w-md p-8">
       <div class="text-center mb-6">
-        <div class="p-6 flex items-center justify-center">
-          <img src="../img/Vector.png" alt="main logo" />
+        <div class="flex items-center justify-center h-9 md:h-12">
+          <img
+            src="img/Header.svg"
+            alt="logo header"
+            class="h-70 object-contain flex items-start justify-start"
+          />
         </div>
-        <p class="text-sm text-gray-500">Sign in to manage tours and guides</p>
+        <p class="text-sm mt-5 text-gray-500">
+          Sign in to manage tours and guides
+        </p>
       </div>
 
       <form id="loginForm" class="space-y-5">
