--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -17,8 +17,12 @@
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <aside class="w-64 bg-white border-r shadow-md">
-        <div class="p-6 border-b">
-          <img src="../img/Vector.png" alt="main logo" />
+        <div class="flex items-center border-b justify-center h-20">
+          <img
+            src="../img/Header.svg"
+            alt="logo header"
+            class="h-96 object-contain flex items-start justify-start"
+          />
         </div>
         <nav class="p-4 space-y-3">
           <a
