--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -797,6 +797,28 @@
         return translations;
       }
 
+      // Merge Name[] + Description[] into tripTranslations[]
+      function combineTripTranslations(nameArr, descArr) {
+        const byLang = new Map();
+
+        nameArr.forEach(({ languageId, translation }) => {
+          if (!byLang.has(languageId))
+            byLang.set(languageId, { languageId, name: "", description: "" });
+          byLang.get(languageId).name = translation;
+        });
+
+        descArr.forEach(({ languageId, translation }) => {
+          if (!byLang.has(languageId))
+            byLang.set(languageId, { languageId, name: "", description: "" });
+          byLang.get(languageId).description = translation;
+        });
+
+        // keep only entries that have at least a name or description
+        return Array.from(byLang.values()).filter(
+          (t) => (t.name ?? "").trim() || (t.description ?? "").trim()
+        );
+      }
+
       function getIds(arr, key = "id") {
         return (arr || []).map((x) => (typeof x === "object" ? x[key] : x));
       }
@@ -1196,24 +1218,27 @@
         await populateEditSelects(data);
       }
 
-      // === Handle Edit Submit ===
+      // === Handle Edit Submit (JSON for /api/Trip/UpdateTrip/{id}) ===
       async function handleEditSubmit(e) {
         e.preventDefault();
         const form = e.target;
 
-        // Collect values (same as before)
+        // Collect values (same sources as before)
         const nameArr = extractTranslations("editNameTranslations", "name");
         const descArr = extractTranslations(
           "editDescriptionTranslations",
           "description"
         );
+        const tripTranslations = combineTripTranslations(nameArr, descArr);
+
         const price = parseFloat(form.Price.value);
         const duration = parseInt(form.Duration.value);
-        const dates = Array.from(
+        const tripDates = Array.from(
           form.querySelectorAll("input[name='TripDates[]']")
         ).map((input) => new Date(input.value).toISOString());
         const isAvailable = form.IsAvailable.checked;
         const categoryId = parseInt(form.CategoryId.value);
+
         const activities = Array.from(form.Activities.selectedOptions).map(
           (o) => parseInt(o.value)
         );
@@ -1227,65 +1252,57 @@
           (o) => parseInt(o.value)
         );
 
-        // Build FormData the way ASP.NET expects
-        const fd = new FormData();
-        // Name[]
-        nameArr.forEach((t, i) => {
-          fd.append(`Name[${i}].languageId`, t.languageId);
-          fd.append(`Name[${i}].translation`, t.translation);
-          // If your API supports it and you later add hidden ids:
-          // if (t.id) fd.append(`Name[${i}].id`, String(t.id));
-        });
-        // Description[]
-        descArr.forEach((t, i) => {
-          fd.append(`Description[${i}].languageId`, t.languageId);
-          fd.append(`Description[${i}].translation`, t.translation);
-          // if (t.id) fd.append(`Description[${i}].id`, String(t.id));
-        });
-        // TripDates[]
-        dates.forEach((d, i) => fd.append(`TripDates[${i}]`, d));
-        // Scalars
-        fd.append("Price", String(price));
-        fd.append("Duration", String(duration));
-        fd.append("IsAvailable", String(isAvailable));
-        fd.append("CategoryId", String(categoryId));
-        // Int arrays
-        activities.forEach((id, i) =>
-          fd.append(`Activities[${i}]`, String(id))
-        );
-        languages.forEach((id, i) => fd.append(`Languages[${i}]`, String(id)));
-        includes.forEach((id, i) => fd.append(`Includes[${i}]`, String(id)));
-        notIncludes.forEach((id, i) =>
-          fd.append(`NotIncludes[${i}]`, String(id))
-        );
+        // Build the payload EXACTLY as your endpoint expects
+        const payload = {
+          tripTranslations, // [{ languageId, name, description }]
+          duration,
+          price,
+          isAvailable,
+          tripDates,
+          categoryId,
+          activities,
+          languages,
+          includes,
+          notIncludes,
+        };
 
         const token = localStorage.getItem("accessToken");
+
         try {
           const res = await fetch(`/api/Trip/UpdateTrip/${editTripId}`, {
             method: "PUT",
-            headers: { Authorization: `Bearer ${token}` }, // don't set Content-Type
-            body: fd,
+            headers: {
+              "Content-Type": "application/json",
+              ...(token ? { Authorization: `Bearer ${token}` } : {}),
+            },
+            body: JSON.stringify(payload),
           });
 
-          // If backend returns JSON on error, great; otherwise fall back to text for debugging
+          // Prefer JSON, but fall back to text for debugging
+          let result, text;
+          try {
+            result = await res.json();
+          } catch {
+            text = await res.text();
+          }
+
           if (!res.ok) {
-            const text = await res.text();
-            console.error("Update failed", res.status, text);
+            console.error("Update failed", res.status, text || result);
             alert(
               `Failed to update trip (${res.status}). ${
-                text || "Check required fields."
+                text || result?.message || "Check required fields."
               }`
             );
             return;
           }
-          const result = await res.json();
-          if (result.succeeded) {
+
+          if (result?.succeeded) {
             alert("Trip updated successfully");
             document.getElementById("editTripModal").classList.add("hidden");
             fetchTrips();
           } else {
             alert(
-              "Failed to update trip: " + (result.message || "Unknown error")
+              "Failed to update trip: " + (result?.message || "Unknown error")
             );
           }
         } catch (err) {
